# python-timing

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
src/: timing.py
src/timing/: __init__.py  timing.py
tests/: test_functions.py  test_methods.py  utils.py
