[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timing"
description = "The only timing library you'll ever need."
readme = "README.md"
requires-python = ">=3.0"
license = { file = "LICENSE" }
keywords = ["timer", "timing"]
authors = [{ name = "ruzickbelle" }]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["autopep8", "pylint", "pytest"]

[project.urls]
Homepage = "https://github.com/ruzickbelle/python-timing"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { file = "VERSION" }
